--- a/deployment/deploy-lr-project/templates/index.html
+++ b/deployment/deploy-lr-project/templates/index.html
@@ -224,9 +224,12 @@ a:hover {
 }
 .prediction{
   font-size: large;
-  background-color: red;
+  background-color: rgb(255, 0, 0);
   color: #fff;
   margin-left: 5%;
+  margin-top: 10%;
+  
+  
 }
 
 
